# dialogue-centric-protocol

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  STATUS.md  protocol_design.md
bindings/: http-sse.md  remote-component.md
docs/: 01-quickstart.md  02-concepts.md  02-design-overview.md  03-dialogue-template.md  03-templates.md  04-hosting.md  04-orchestrator.md  05-extending.md  05-participant.md  06-evaluation.md  06-hosting-delivery.md  07-extending-sharing.md  07-sharing.md  08-components.md  08-evaluation.md  09-api-reference.md  09-research-companion.md  10-api-reference.md  10-troubleshooting.md  README.md  api-reference.md  components-reference.md  concepts.md  dcp-getting-started-guide.md  guide-components.md  guide-eval.md  guide-extending.md  guide-hosting.md  guide-research-companion.md  guide-sharing.md  guide-templates.md  quickstart.md  walkthrough-research-companion.md
docs/examples/: hello_dialogue.py  hello_dialogue_mock.py  hello_dialogue_qwen.py  orchestrator_build_own.py  orchestrator_control_policy.py  orchestrator_oversight.py  orchestrator_run_vs_manual.py  orchestrator_share_policy.py  research_companion.py  research_companion_mock.py  template_create_generator.py  template_create_plugin_share.py  template_create_preset.py  template_usage_register_run.py
docs/examples/component/: README.md  _demo.py  dcp-component.json  round_robin.py  run_local.py  run_remote.py
examples/plugin-example/: README.md  pyproject.toml
examples/plugin-example/src/dcp_plugin_example/: __init__.py
methodology/: methodology.md
research/: a2a.md  acp.md  agents-json.md  anp.md  mcp.md
sdk/: .env.example  .gitignore  CHANGELOG.md  PLAN.md  README.md  alembic.ini  pyproject.toml
sdk/docs/: api-reference.md  concepts.md
sdk/docs/examples/: hello_dialogue.py  hello_dialogue_mock.py
sdk/migrations/: env.py
sdk/migrations/versions/: af95536a12e5_initial_schema.py
sdk/scripts/: check  gen_schema.py
sdk/src/dcp/: __init__.py  cli.py  config.py  errors.py  evaluation.py  plugins.py  presets.py  server.py  viewer.py
sdk/src/dcp/authoring/: __init__.py  generator.py
sdk/src/dcp/component/: __init__.py  agent.py  artifacts.py  delivery.py  hosting.py  lockfile.py  manifest.py  projection.py  remote.py  resolver.py
sdk/src/dcp/delivery/: __init__.py  base.py  http_sse.py
sdk/src/dcp/orchestration/: __init__.py  actions.py  context.py  human.py  orchestrator.py  oversight.py  policy.py
sdk/src/dcp/participation/: __init__.py  casting.py  registry.py  tiers.py
sdk/src/dcp/provider/: __init__.py  anthropic_provider.py  base.py  factory.py  local_provider.py  mock.py  openai_provider.py  transformers_provider.py
sdk/src/dcp/registry/: __init__.py  auth.py  hosting.py
sdk/src/dcp/schema/: __init__.py  base.py  entities.py  enums.py  records.py  values.py
sdk/src/dcp/state/: __init__.py  reducer.py  store.py
sdk/tests/: test_cli.py  test_evaluation.py  test_example_plugin.py  test_facade.py  test_flagship.py  test_migrations.py  test_plugins.py  test_presets.py  test_smoke.py  test_viewer.py
sdk/tests/authoring/: test_generator.py
sdk/tests/component/: test_agent_identity.py  test_artifacts.py  test_cli_component.py  test_example_component.py  test_hosting.py  test_local_model.py  test_lockfile.py  test_manifest.py  test_projection.py  test_provision.py  test_remote.py  test_remote_agent.py  test_resolver.py  test_security.py  test_streaming.py
sdk/tests/conformance/: test_acceptance.py
sdk/tests/delivery/: test_http_sse.py
sdk/tests/orchestration/: test_adaptive.py  test_context.py  test_orchestrator.py  test_oversight_control.py  test_policy.py  test_resume.py  test_rubric.py  test_suspend.py  test_termination.py
sdk/tests/participation/: test_casting.py  test_registry.py  test_tiers.py
sdk/tests/provider/: test_anthropic_provider.py  test_available.py  test_factory.py  test_local_provider.py  test_mock.py  test_openai_provider.py  test_provider_plugins.py  test_transformers_provider.py
sdk/tests/registry/: test_auth.py  test_discovery.py  test_hosting.py  test_templates.py
sdk/tests/schema/: test_entities.py  test_enums.py  test_roundtrip.py  test_values.py
sdk/tests/state/: test_postgres.py  test_reducer.py  test_restore.py  test_store.py
