[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcp"
version = "0.2.0.dev0"                     # package version (PEP 440); wire protocol version is "0.2.0"
description = "Dialogue-centric Protocol — reference Python SDK for human-agent multi-agent dialogue"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }                 # full text in ../LICENSE
keywords = ["dialogue", "multi-agent", "protocol", "orchestration", "human-in-the-loop", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2",
    "openai",
    "anthropic",
    "sqlalchemy>=2",
    "starlette",
    "uvicorn",
    "sse-starlette",
]

[project.scripts]
dcp = "dcp.cli:main"

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3"]
migrations = ["alembic>=1.13"]              # production schema management (alembic upgrade head)
transformers = ["transformers>=4.51", "torch>=2.1", "accelerate>=0.26"]  # in-process open models (Qwen3)
yaml = ["pyyaml>=6"]                        # YAML component manifests (JSON works without it)
hf = ["huggingface-hub>=0.20"]             # hf:// artifact downloads (file:// / http(s) need no extra)
# API/OpenAI-compatible local models (vLLM/Ollama) work with the core install (base_url)
dev = ["pytest", "pytest-asyncio", "ruff", "mypy", "httpx", "alembic>=1.13"]

[tool.hatch.build.targets.wheel]
packages = ["src/dcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["migrations"]        # Alembic-generated / env scaffolding

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["src/dcp"]

[[tool.mypy.overrides]]
module = ["torch", "transformers", "transformers.*", "yaml", "huggingface_hub"]   # optional extras
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true
